# captivate

./: .copier-answers.yml  .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  lock-high.json  lock.json  pyproject.toml
.github/: SECURITY.md  issue_template.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.yaml  ideas-for-docs.yaml  ideas-for-infrastructure.yaml  ideas.yaml  internal.yaml  q-a.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yml  internal.yaml
.github/workflows/: contrib.yml  main.yml  sphinx.yml
.tools/: pyproject.toml
.tools/requirements/: requirements_both.txt
changelog/: towncrier_template.md.jinja
docs/: conf.py  contributing.md  index.md  pyproject.toml
docs/captivate_docs/: docstrings.py  intersphinx.py
scripts/: Sync-Py.ps1  pyproject.toml
scripts/captivate_tools/: __main__.py  add_changes.py  sync.py
src/captivate/: __init__.py
tests/: pyproject.toml  test_captivate.py
tests/captivate_tests/: test_captivate.py
